
[B]7.0.5 (2025.01.04)[/B]
- Faster title matching during scraping.
- Fewer aliases used during title matching.
- Fixed AllDebrid external resolving.
- Fixed DebridLink external resolving.

[B]7.0.4 (2025.01.02)[/B]
- Various fixes for Windows.
- Replaced IFF function for older SQLite versions.
- Fixed negative timestamp formatting.
- Fixed Trakt lists for skin widgets.

[B]7.0.3 (2024.12.23)[/B]
- Fixed ResolveURL authentication.

[B]7.0.2 (2024.12.20)[/B]
- Fixed reuselanguageinvoker.
- Fixed cache item copy.
- Fixed loading issues on empty menus.

[B]7.0.1 (2024.12.20)[/B]
- Fixed Metadata notifications.
- Fixed setup wizard extensions.
- Fixed scraping optimization.

[B]7.0.0 (2024.12.20)[/B]
- Way too many changes to list them all here.
- Added database compression support.
- Implemented proper Trakt sync activities.
- Improved Trakt history retrieval.
- Improved Trakt progress retrieval.
- Improved Trakt rating retrieval.
- Fixed Trakt show watched list.
- Improved Trakt local lookup times.
- Improved binge process for last episode.
- Fixed dangling playback window.
- Improved rating dialog responsiveness.
- Fixed quick menu loader.
- Added Trakt movie disc releases.
- Improved IMDb batch requests.
- Improved TMDb movie disc releases.
- Improved TMDb season ratings.
- Improved TMDb API calls.
- Retrieve various TMDb release dates.
- Added audio language to list items.
- Added TMDb images for shows.
- Added customizable progress menu.
- Added progress submenus.
- Added customizable arrivals menu.
- Added release submenus.
- Added advanced menu paging.
- Added advanced menu sorting.
- Added advanced menu filtering.
- Fixed subtitles on paused playback.
- Added TMDb thumbnails for episodes.
- Added new OpenSubtitles support.
- Improved skipping intro chapters.
- Reduced rating and continue dialog timeouts.
- Fixed rating and continue dialog actions.
- Fixed offline provider dataset preparation.
- Improved stream language detection.